@@ -18,55 +18,45 @@
 package com.ford.labs.retroquest.column;
 
 import com.ford.labs.retroquest.exception.ColumnTitleNotFoundException;
+import com.ford.labs.retroquest.websocket.WebsocketService;
 import com.ford.labs.retroquest.websocket.events.WebsocketColumnTitleEvent;
 import com.ford.labs.retroquest.websocket.events.WebsocketEventType;
-import com.ford.labs.retroquest.websocket.WebsocketService;
 import io.micrometer.core.instrument.MeterRegistry;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Service
 public class ColumnService {
 
-    private final ColumnTitleRepository columnTitleRepository;
+    private final ColumnRepository columnRepository;
     private final MeterRegistry meterRegistry;
     private final WebsocketService websocketService;
 
-    public ColumnService(ColumnTitleRepository columnTitleRepository, MeterRegistry meterRegistry, WebsocketService websocketService) {
-        this.columnTitleRepository = columnTitleRepository;
+    public ColumnService(ColumnRepository columnRepository, MeterRegistry meterRegistry, WebsocketService websocketService) {
+        this.columnRepository = columnRepository;
         this.meterRegistry = meterRegistry;
         this.websocketService = websocketService;
     }
 
     public List<Column> getColumns(String teamId) {
-        return columnTitleRepository.findAllByTeamId(teamId).stream()
-                .map(Column::fromColumnTitle)
-                .sorted((o1, o2) -> {
-                    long difference = o1.getId() - o2.getId();
-                    if(difference > 0) return 1;
-                    if(difference < 0) return -1;
-                    return 0;
-                })
-                .collect(toList());
+        return columnRepository.findAllByTeamId(teamId).stream().sorted().toList();
     }
 
-    public ColumnTitle editColumnTitleName(Long columnId, String newColumnName, String teamId) {
+    public Column editColumnTitleName(Long columnId, String newColumnName, String teamId) {
         var existingColumnTitle = fetchColumnTitle(teamId, columnId);
         existingColumnTitle.setTitle(newColumnName);
 
-        ColumnTitle newColumnTitle = columnTitleRepository.save(existingColumnTitle);
+        Column newColumn = columnRepository.save(existingColumnTitle);
 
-        websocketService.publishEvent(new WebsocketColumnTitleEvent(teamId, WebsocketEventType.UPDATE, newColumnTitle));
+        websocketService.publishEvent(new WebsocketColumnTitleEvent(teamId, WebsocketEventType.UPDATE, newColumn));
 
         meterRegistry.counter("retroquest.columns.changed.count").increment();
 
-        return newColumnTitle;
+        return newColumn;
     }
 
-    public ColumnTitle fetchColumnTitle(String teamId, Long columnId) {
-        return columnTitleRepository.findByTeamIdAndId(teamId, columnId).orElseThrow(ColumnTitleNotFoundException::new);
+    public Column fetchColumnTitle(String teamId, Long columnId) {
+        return columnRepository.findByTeamIdAndId(teamId, columnId).orElseThrow(ColumnTitleNotFoundException::new);
     }
 }
